Update files for new logic

--- a/beauty_salon/templates/notes.html
+++ b/beauty_salon/templates/notes.html
@@ -35,13 +35,21 @@
 						<div class="col-md-3">
 							<nav>
 								<div class="accaunt__left">
-							<div class="accaunt__ava fic">
-								<img src="{% static 'img/avatars/1.svg' %}" alt="avatar" class="accaunt__ava_img">
-								<span class="accaunt__ava_name">Пришелец</span>
+							<div class="accaunt__ava fic" style="width: 50px; height: 50px;">
+								{% if user.avatar %}
+									<img src="{{ user.avatar.url }}" alt="avatar" class="accaunt__ava_img">
+								{% else %}
+									<img src="{% static 'img/acc.svg' %}" alt="avatar" class="accaunt__ava_img">
+								{% endif %}
+								<span class="accaunt__ava_name" class="accaunt__ava_img">{{ user.username }}</span>
 							</div>
-							<div class="accaunt__settings fic">
-								<a href="#" class="accaunt__settings_intro">Изменить профиль</a>
-								<a href="#" class="accaunt__settings_out">Выйти</a>
+							<div class="accaunt__settings fic" style="gap: 8px;">
+								{% if is_manager %}
+									<a href="{% url 'beauty_salon:manager' %}" class="accaunt__settings_out">Панель менеджера</a>
+									<a href="{% url 'beauty_salon:logout' %}" class="accaunt__settings_out">Выйти</a>
+								{% else %}
+									<a href="{% url 'beauty_salon:logout' %}" class="accaunt__settings_out">Выйти</a>
+								{% endif %}
 							</div>
 							<nav>
 								<div class="accaunt__menu_title">МЕНЮ</div>
@@ -127,21 +135,20 @@
 					</nav>
 					</div>
 					<div class="col-3 col-md-2 col-lg-3">
-						{% comment %} {% if user.is_authenticated %} {% endcomment %}
 							<div class="header__block">
-								{% if is_manager %}
-								{% else %}
-							<a href="{% url 'beauty_salon:call_me' %}" class="menu__item_link"><button class="header__block_btn">Перезвоните мне</button></a>
+							{% if is_manager %}
+							{% else %}
+								<a href="{% url 'beauty_salon:call_me' %}" class="menu__item_link"><button class="header__block_btn">Перезвоните мне</button></a>
 							{% endif %}
-							{% comment %} <div class="header__block_auth">
-								{% if user.avatar %}
-								<img src="{{ user.avatar.url }}" alt="account" class="header__account_img">
-								{% else %}
-								<img src="{% static 'img/acc.svg' %}" alt="account" class="header__account_img">
-								<span class="header__block_auth__intro">{{ user.username }}</span>
-								{% endif %}
-							</div>
-							{% endif %} {% endcomment %}
+						<div class="header__block_auth">
+									{% if user.avatar %}
+										<img src="{{ user.avatar.url }}" alt="avatar" class="accaunt__ava_img">
+									{% else %}
+										<img src="{% static 'img/acc.svg' %}" alt="avatar" class="accaunt__ava_img">
+									{% endif %}
+							{% comment %} <img src="{% static 'img/avatars/1.svg' %}" alt="account" class="header__account_img"> {% endcomment %}
+							<span class="header__block_auth__intro">{% if user.is_authenticated %}{{ user.username }}{% else %}Войти{% endif %}</span>
+						</div>
 					</div>
 					</div>
 				</div>
@@ -157,33 +164,22 @@
 				<div class="row">
 					<div class="col-md-2">
 						<div class="accaunt__left">
-							{% comment %} {% if user.is_authenticated %} {% endcomment %}
-								<div class="accaunt__ava fic" style="width: 50px; height: 50px;">
-									{% if user.avatar %}
-										<img src="{{ user.avatar.url }}" alt="avatar" class="accaunt__ava_img">
-									{% else %}
-										<img src="{% static 'img/acc.svg' %}" alt="avatar" class="accaunt__ava_img">
-									{% endif %}
-									<span class="accaunt__ava_name">{{ user.username }}</span>
-								</div>
-							{% comment %} {% else %}
-								<div class="accaunt__ava fic">
-									<img src="{% static 'img/avatars/1.svg' %}" alt="avatar" class="accaunt__ava_img">
-									<span class="accaunt__ava_name">Пришелец</span>
-								</div>
-							{% endif %} {% endcomment %}
+							<div class="accaunt__ava fic" style="width: 50px; height: 50px;">
+								{% if user.avatar %}
+									<img src="{{ user.avatar.url }}" alt="avatar" class="accaunt__ava_img">
+								{% else %}
+									<img src="{% static 'img/acc.svg' %}" alt="avatar" class="accaunt__ava_img">
+								{% endif %}
+								<span class="accaunt__ava_name" >{{ user.username }}</span>
+							</div>
 							<div class="accaunt__settings fic" style="gap: 8px;">
 								{% if is_manager %}
 									<a href="{% url 'beauty_salon:manager' %}" class="accaunt__settings_out">Панель менеджера</a>
 									<a href="{% url 'beauty_salon:logout' %}" class="accaunt__settings_out">Выйти</a>
 								{% else %}
-									{% comment %} <a href="#" class="accaunt__settings_intro">Изменить профиль</a> {% endcomment %}
 									<a href="{% url 'beauty_salon:logout' %}" class="accaunt__settings_out">Выйти</a>
 								{% endif %}
-								{% comment %} <a href="#" class="accaunt__settings_intro">Изменить профиль</a>
-								<a href="{% url 'beauty_salon:logout' %}" class="accaunt__settings_out">Выйти</a> {% endcomment %}
 							</div>
-							
 							<nav>
 								<div class="accaunt__menu_title">МЕНЮ</div>
 								<ul class="accaunt__menu">
@@ -278,10 +274,10 @@
 									</div>
 									<hr class="notes__block_hr">
 									<div class="notes__footer fic">
-										{% comment %} <a href="#" class="notes__footer_link tipsPopupOpen">Чаевые</a> {% endcomment %}
+										{% if appointment.payment %}
 										<button class="notes__footer_btn payPopupOpen">Оплатить</button>
-										<div class="notes__main_pay unPaid">{% if appointment.payment == 'e_pay' %}ОПЛАЧЕНО{% else %}НЕОПЛАЧЕНО{% endif %}
-										</div>
+										{% endif %}
+										<div class="notes__main_pay unPaid">{% if appointment.payment == 'e_pay' %}ОПЛАЧЕНО{% else %}НЕОПЛАЧЕНО{% endif %}</div>
 									</div>
 								</div>
 							</div>
@@ -294,8 +290,8 @@
 							<div class="notes__main_title">ПРОШЕДШИЕ</div>
 							{% for appointment in past_appointments %}
 							<div class="notes__main_block">
-								{% if appointment.service.image.url %}
-								<img src={{ appointment.service.image.url }} alt="service1" class="notes__main_block__img">
+								{% if appointment.service.image %}
+								<img src="{{ appointment.service.image.url }}" alt="service1" class="notes__main_block__img">
 								{% else %}
 								<img src="{% static 'img/services/service1.svg' %}" alt="service1" class="notes__main_block__img">
 								{% endif %}
@@ -305,7 +301,7 @@
 											<div class="notes__main_number">Запись №{{ appointment.id }}</div>
 											<div class="notes__main_address">{{ appointment.salon.address }}</div>
 										</div>
-										<div class="notes__main_pay payid">{% if appointment.payment %}ОПЛАЧЕНО{% else %}НЕОПЛАЧЕНО{% endif %}</div>
+										<div class="notes__main_pay payid">{% if appointment.payment  %}ОПЛАЧЕНО{% else %}НЕОПЛАЧЕНО{% endif %}</div>
 									</div>
 									<div class="notes__main_block__main ">
 										<div class="notes__main_block__main_items">
@@ -331,9 +327,9 @@
 									</div>
 									<hr class="notes__block_hr">
 									<div class="notes__footer fic">
-										<a href="{% url 'beauty_salon:feedback' %}" class="notes__footer_link ">Оставить отзыв</a>
+										<a href="{% url 'beauty_salon:feedback' %}" class="notes__footer_link">Оставить отзыв</a>
 										<a href="#" class="notes__footer_link tipsPopupOpen">Чаевые</a>
-										<div class="notes__main_pay payid">{% if appointment.payment %}ОПЛАЧЕНО{% else %}НЕОПЛАЧЕНО{% endif %}</div>
+										<div class="notes__main_pay payid">{% if appointment.payment == 'e_pay' %}ОПЛАЧЕНО{% else %}НЕОПЛАЧЕНО{% endif %}</div>
 									</div>
 								</div>
 							</div>
@@ -342,14 +338,14 @@
 							{% endfor %}
 						</div>
 					</div>
-					{% comment %} <div class="col-md-12 col-lg-3 dec">
-						<div class="notes__pay">
+					<div class="col-md-12 col-lg-3 dec" >
+						<div class="notes__pay" >
 							<button class="notes__pay_btn">Оплатить онлайн</button>
 							<div class="notes__pay_info">Вы можете оплатить услуги прямо сейчас онлайн или расплатиться  в салоне</div>
 							<div class="notes__pay_intro">Сумма оплаты</div>
-							<div class="notes__pay_sum">3 900 руб</div>
+							<div class="notes__pay_sum">3900 руб</div>
 						</div>
-					</div> {% endcomment %}
+					</div>
 				</div>
 			</div>
 		</div>
@@ -426,7 +422,7 @@
 	</footer>
 	<div style="display: none;">
 		<div class="box-modal paymentPopup popup" id="paymentModal">
-			<div class="box-modal_close arcticmodal-close"><img src="img/x.svg" alt="x"></div>
+			<div class="box-modal_close arcticmodal-close"><img src="{% static 'img/x.svg' %}" alt="x"></div>
 			<div class="popup__title paymentPopup__title">Оплата</div>
 			<form action="#" class="paymentPopup__form">
 				<div class="paymentPopup__form_intro popup__intro">номер карты</div>
@@ -439,28 +435,28 @@
 					<input type="text" name="fname" class="paymentPopup__form_inputMid popup__input" placeholder="Имя владельца" required="">
 					<input type="text" name="cvc" class="tipsPopup__form_inputMin popup__input" placeholder="CVC" required="">
 				</div>
-				<div class="paymentPopup__form_intro popup__intro">Ваш e-mail(необязательно)</div>
-				<input type="email" name="tel" class="paymentPopup__form_input popup__input" placeholder="pochta@mail.ru">
-				<button class="tipsPopup__btn popup__btn">Оплатить</button>
+				<button type="submit" class="paymentPopup__form_btn popup__btn">Оплатить</button>
 			</form>
 		</div>
-	</div>
-	<div style="display: none;">
-	    <div class="box-modal tipsPopup popup" id="tipsModal">
-	        <div class="box-modal_close arcticmodal-close"><img src="img/x.svg" alt="x"></div>
-	        <div class="">
-				<div class="popup__title tipsPopup__title">Чаевые</div>
-				<form action="#" class="tipsPopup__form">
-					<div class="tipsPopup__form_intro popup__intro">Введите сумму чаевых</div>
-					<input type="text" class="tipsPopup__form_input popup__input" placeholder="0.00" required="">
-					<button class="tipsPopup__btn popup__btn">Далее</button>
-				</form>
-			</div>
-	    </div>
-	</div>
-	<div style="display: none;">
-		<div class="box-modal reviewPopup popup" id="reviewModal">
-			<div class="box-modal_close arcticmodal-close"><img src="img/x.svg" alt="x"></div>
+		<div class="box-modal tipsPopup popup" id="tipsModal">
+			<div class="box-modal_close arcticmodal-close"><img src="{% static 'img/x.svg' %}" alt="x"></div>
+			<div class="popup__title tipsPopup__title">Чаевые</div>
+			<form action="#" class="tipsPopup__form">
+				<div class="tipsPopup__form_intro popup__intro">сумма чаевых</div>
+				<input type="text" name="tel" class="tipsPopup__form_input popup__input" placeholder="Введите сумму" required="">
+				<div class="tipsPopup__form_block fic">
+					<input type="text" name="mm" class="tipsPopup__form_inputMin popup__input" placeholder="ММ" required="">
+					<input type="text" name="gg" class="tipsPopup__form_inputMin popup__input" placeholder="ГГ" required="">
+				</div>
+				<div class="tipsPopup__form_elems fic">
+					<input type="text" name="fname" class="tipsPopup__form_inputMid popup__input" placeholder="Имя владельца" required="">
+					<input type="text" name="cvc" class="tipsPopup__form_inputMin popup__input" placeholder="CVC" required="">
+				</div>
+				<button type="submit" class="tipsPopup__form_btn popup__btn">Оплатить</button>
+			</form>
+		</div>
+		<div class="box-modal rewiewPopup popup" id="reviewModal">
+			<div class="box-modal_close arcticmodal-close"><img src="{% static 'img/x.svg' %}" alt="x"></div>
 			<div class="popup__title reviewPopup__title">Отзыв</div>
 			<form action="#" class="reviewPopup__form">
 				<input type="text" name="fname" class="paymentPopup__form_input popup__input" placeholder="Введите имя" required="">
