--- a/beauty_salon/templates/notes.html
+++ b/beauty_salon/templates/notes.html
@@ -338,14 +338,14 @@
 							{% endfor %}
 						</div>
 					</div>
-					<div class="col-md-12 col-lg-3 dec" >
+					{% comment %} <div class="col-md-12 col-lg-3 dec" >
 						<div class="notes__pay" >
 							<button class="notes__pay_btn">Оплатить онлайн</button>
 							<div class="notes__pay_info">Вы можете оплатить услуги прямо сейчас онлайн или расплатиться  в салоне</div>
 							<div class="notes__pay_intro">Сумма оплаты</div>
 							<div class="notes__pay_sum">3900 руб</div>
 						</div>
-					</div>
+					</div> {% endcomment %}
 				</div>
 			</div>
 		</div>
