--- a/beauty_salon/templates/index.html
+++ b/beauty_salon/templates/index.html
@@ -291,7 +291,7 @@
 									<img src="{% static 'img/masters/master1.svg' %}" alt="master" class="masters__header_img">
 								{% endif %}
 								<div class="masters__header_elmes">
-									<div class="masters__header_name">{{ master.name }}</div>
+									<div class="masters__header_name" data-master-id="{{ master.id }}">{{ master.name }}</div>
 									<img src="{% static 'img/rating.svg' %}" alt="rating" class="masters__header_rating">
 									<div class="masters__header_reviews">{{ master.feedbacks.count }} отзывов</div>
 								</div>
@@ -454,7 +454,7 @@
 							<textarea name="contactsTextarea" class="contacts__form_textarea" placeholder="Вопрос(необязательно)"></textarea>
 							<div class="contacts__form_checkboxBlock fic">
 								<input type="checkbox" name="checkbox" class="contacts__form_checkbox" checked required>
-								<span class="contacts__form_checkboxBlock__intro">Я согласен(а) с политикой конфидециоальности</span>
+								<span class="contacts__form_checkboxBlock__intro">Я согласен(а) с <a href="{% url 'beauty_salon:privacy_policy' %}" target="_blank">политикой конфиденциальности</a></span>
 							</div>
 							<button type="submit" class="contacts__form_btn">Отправить</button>
 						</form>
@@ -568,7 +568,7 @@
 					<div class="footer__bottom">
 						<div class="row">
 							<div class="col-md-4 col-lg-3">
-								<a href="#" class="footer__link">Политика конфиденциальности</a>
+								<a href="{% url 'beauty_salon:privacy_policy' %}" class="footer__link">Политика конфиденциальности</a>
 							</div>
 							<div class="col-md-3">
 								<div class="footer__copy">2022. Все права защищены</div>
@@ -603,7 +603,7 @@
 				</div>
 				<div class="contacts__form_checkboxBlock fic">
 					<input type="checkbox" class="contacts__form_checkbox" checked="">
-					<span class="contacts__form_checkboxBlock__intro">Я согласен(а) с политикой конфидециоальности</span>
+					<span class="contacts__form_checkboxBlock__intro">Я согласен(а) с <a href="{% url 'beauty_salon:privacy_policy' %}" target="_blank">политикой конфиденциальности</a></span>
 				</div>
 				<button type="submit" class="popup__btn authPopup__btn">Отправить</button>
 			</form>
