Add buton Запись по телефону.

--- a/beauty_salon/templates/service.html
+++ b/beauty_salon/templates/service.html
@@ -114,7 +114,13 @@
 				</div>
 				<div class="service__block">
 					<h1 class="service__title">Запись на услугу</h1>
-					<button class="service__btn btn">Запись по телефону</button>
+					<a>
+					<button class="service__btn btn" 
+							onclick="alert('Запись по телефону: +7 (917) 902 38 00')">
+					Запись по телефону
+					</button>
+				</a>
+					{% comment %} <button class="service__btn btn">Запись по телефону</button> {% endcomment %}
 				</div>
 				<form action="#" class="service__form">
 					<div class="service__form_block service__salons">
