--- a/beauty_salon/templates/serviceFinally.html
+++ b/beauty_salon/templates/serviceFinally.html
@@ -150,8 +150,12 @@
 								</div>
 								<textarea name="contactsTextarea" class="contacts__form_textarea" placeholder="Вопрос(необязательно)"></textarea>
 								<div class="contacts__form_checkboxBlock fic">
-									<input type="checkbox" class="contacts__form_checkbox" checked="">
-									<span class="contacts__form_checkboxBlock__intro">Я согласен(а) с политикой конфидециоальности</span>
+									<input type="checkbox" class="contacts__form_checkbox" checked="" required>
+									<span class="contacts__form_checkboxBlock__intro">Я согласен(а) с политикой 
+										                        <a href="{% static 'consent_form.pdf' %}" target="_blank" rel="noopener noreferrer">
+                            конфиденциальности
+                        </a>
+									</span>
 								</div>
 								<button type="submit" class="serviceFinallys__form_btn">Записаться</button>
 								<button type="button" class="serviceFinallys__form_back" onclick="window.history.back()">Назад</button>
