--- a/beauty_salon/templates/index.html
+++ b/beauty_salon/templates/index.html
@@ -133,18 +133,13 @@
 	<section id="salons">
 		<div class="container">
 			<div class="salons pb100">
-				<div class="salons__slider_arrows fic mob">
+				<div class="salons__slider_arrows fic">
 					<div class="title">Наши салоны</div>
 					<div class="slider__arrows fic">
-						<div class="slider__arrows_arrow leftArrow">
-							<i class="arrowRight"></i>
-						</div>
-						<div class="slider__arrows_arrow rightArrow">
-							<i class="arrowLleft"></i>
-						</div>
+						<div class="slider__arrows_arrow leftArrow"><i class="arrowRight"></i></div>
+						<div class="slider__arrows_arrow rightArrow"><i class="arrowLleft"></i></div>
 					</div>
 				</div>
-				<div class="title dec">Наши салоны</div>
 				<div class="row salonsSlider">
 					{% for salon in salons %}
 					<div class="col-6 col-md-4 col-lg-4 col-xl-3">
