--- a/static/css/main.css
+++ b/static/css/main.css
@@ -227,7 +227,7 @@ color: #323232;
 opacity: 0.3;
 }
 .salons__slider_arrows {
-
+	justify-content: space-between;
 }
 .salonsSliderMob {
 	display: none;
@@ -740,6 +740,9 @@ opacity: 0.3;
 /*End footer*/
 .mob {
 	display: none;
+}
+.dec {
+	display: block;
 }
 .decVis {
 	visibility: hidden;
