--- a/beauty_salon/templates/service.html
+++ b/beauty_salon/templates/service.html
@@ -114,12 +114,12 @@
 				</div>
 				<div class="service__block">
 					<h1 class="service__title">Запись на услугу</h1>
-					<a>
+				{% comment %} <a>
 					<button class="service__btn btn" 
 							onclick="alert('Запись по телефону: +7 (917) 902 38 00')">
 					Запись по телефону
 					</button>
-				</a>
+				</a> {% endcomment %}
 					{% comment %} <button class="service__btn btn">Запись по телефону</button> {% endcomment %}
 					<button class="service__btn btn" onclick="openPhoneBooking()">Запись по телефону</button>
 				</div>
