--- a/beauty_salon/templates/serviceFinally.html
+++ b/beauty_salon/templates/serviceFinally.html
@@ -150,7 +150,7 @@
 								</div>
 								<textarea name="contactsTextarea" class="contacts__form_textarea" placeholder="Вопрос(необязательно)"></textarea>
 								<div class="contacts__form_checkboxBlock fic">
-									<input type="checkbox" class="contacts__form_checkbox" checked="">
+									<input type="checkbox" class="contacts__form_checkbox" checked="" required>
 									<span class="contacts__form_checkboxBlock__intro">Я согласен(а) с <a href="{% url 'beauty_salon:privacy_policy' %}" target="_blank">политикой конфиденциальности</a></span>
 								</div>
 								<button type="submit" class="serviceFinallys__form_btn">Записаться</button>
