--- a/beauty_salon/templates/index.html
+++ b/beauty_salon/templates/index.html
@@ -597,7 +597,7 @@
 					<input type="text" name="tel" class="contacts__form_iunput" placeholder="+7(999)999--99-99" required="">
 				</div>
 				<div class="contacts__form_checkboxBlock fic">
-					<input type="checkbox" class="contacts__form_checkbox" checked="">
+					<input type="checkbox" class="contacts__form_checkbox" checked="" required>
 					<span class="contacts__form_checkboxBlock__intro">Я согласен(а) с <a href="{% url 'beauty_salon:privacy_policy' %}" target="_blank">политикой конфиденциальности</a></span>
 				</div>
 				<button type="submit" class="popup__btn authPopup__btn">Отправить</button>
