--- a/beauty_salon/templates/register.html
+++ b/beauty_salon/templates/register.html
@@ -33,10 +33,7 @@
                 <div class="contacts__form_checkboxBlock fic">
                     <input type="checkbox" name="checkbox" class="contacts__form_checkbox" checked required>
                     <span class="contacts__form_checkboxBlock__intro">
-                        Я согласен(а) с политикой 
-                        <a href="{% static 'consent_form.pdf' %}" target="_blank" rel="noopener noreferrer">
-                            конфиденциальности
-                        </a>
+                        Я согласен(а) с политикой <a href="{% url 'beauty_salon:privacy_policy' %}" target="_blank">конфиденциальности</a>
                     </span>
                 </div>
                 <button type="submit" class="register-btn">Зарегистрироваться</button>
