Add master.id for auto  paste name in feedback

--- a/beauty_salon/templates/notes.html
+++ b/beauty_salon/templates/notes.html
@@ -327,7 +327,7 @@
 									</div>
 									<hr class="notes__block_hr">
 									<div class="notes__footer fic">
-										<a href="{% url 'beauty_salon:feedback' %}" class="notes__footer_link">Оставить отзыв</a>
+										<a href="{% url 'beauty_salon:feedback' %}?master_id={{ appointment.master.id }}" class="notes__footer_link">Оставить отзыв</a>
 										<a href="#" class="notes__footer_link tipsPopupOpen">Чаевые</a>
 										<div class="notes__main_pay payid">{% if appointment.payment %}ОПЛАЧЕНО{% else %}НЕОПЛАЧЕНО{% endif %}</div>
 									</div>
@@ -339,15 +339,6 @@
 						</div>
 					</div>
 					<div class="col-md-12 col-lg-3 dec" >
-					{% comment %} <div class="col-md-12 col-lg-3 dec" >
-						<div class="notes__pay" >
-							<button class="notes__pay_btn">Оплатить онлайн</button>
-							<div class="notes__pay_info">Вы можете оплатить услуги прямо сейчас онлайн или расплатиться  в салоне</div>
-							<div class="notes__pay_intro">Сумма оплаты</div>
-							<div class="notes__pay_sum">3900 руб</div>
-						</div>
-					</div>
-					</div> {% endcomment %}
 				</div>
 			</div>
 		</div>
