--- a/beauty_salon/templates/service.html
+++ b/beauty_salon/templates/service.html
@@ -114,14 +114,14 @@
 				</div>
 				<div class="service__block">
 					<h1 class="service__title">Запись на услугу</h1>
-				{% comment %} <a>
+				<a>
 					<button class="service__btn btn" 
 							onclick="alert('Запись по телефону: +7 (917) 902 38 00')">
 					Запись по телефону
 					</button>
-				</a> {% endcomment %}
+				</a>
 					{% comment %} <button class="service__btn btn">Запись по телефону</button> {% endcomment %}
-					<button class="service__btn btn" onclick="openPhoneBooking()">Запись по телефону</button>
+					{% comment %} <button class="service__btn btn" onclick="openPhoneBooking()">Запись по телефону</button> {% endcomment %}
 				</div>
 				<form action="#" class="service__form">
 					<div class="service__form_block service__salons">
